--- a/backend/newsletter/templates/results.html
+++ b/backend/newsletter/templates/results.html
@@ -6,7 +6,7 @@
                 <tr>
                     <td style="width:100px;">
                         <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;font-weight:normal;text-align: justify;color:#212121;  height: 10px; width:570px; padding: 10px; background-color: #F4F4F4;">
-                            Your customized occultation predicitions for 2014/12/01 - 31
+                            Your customized occultation predicitions for {{ date_start }} {{ date_end }}
                         </div>
                     </td>
                 </tr>
@@ -78,45 +78,33 @@
             <tbody>
                 <tr>
                     <td>
-                        <div style="text-align: center;color:#212121;  height: 30px; width:600px; padding: 10px; background-color: #F4F4F4;">
-                            <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:670px;">
-                                <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:rgb(255, 255, 255);width:100%;">
+                        <div style="text-align: center;color:#212121;  height: 30px; width:100%; padding: 10px; background-color: #F4F4F4;">
+                            
+                                <table align="center" border="0" cellpadding="1" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:rgb(255, 255, 255);width:100%;">
                                     <tbody>
                                         <tr>
-                                            <td>
-                                                <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255);width: 40px;">
+                                            <td style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:11px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255);width: 130px;">
                                                     Date
-                                                </div>
                                             </td>
-                                            <td>
-                                                <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255);width: 20px;">
+                                            <td style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:11px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255);width: 35px;">
                                                     Name
-                                                </div>
                                             </td>
-                                            <td>
-                                                <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255);width: 20px;">
+                                            <td style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:11px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255);width: 40px;">
                                                     Mag
-                                                </div>
                                             </td>
-                                            <td>
-                                                <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255);width: 45px;">
+                                            <td style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:11px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255);width: 40px;">
                                                     Velocity
-                                                </div>
                                             </td>
-                                            <td>
-                                                <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255);width: 20px;">
+                                            <td style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:11px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255);width: 40px;">
                                                     Duration
-                                                </div>
                                             </td>
-                                            <td>
-                                                <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255); width: 20px;">
+                                            <td style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:11px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255);width: 40px;">
                                                     Download <br> File
-                                                </div>
                                             </td>
                                         </tr>
                                     </tbody>
                                 </table>
-                            </div>
+                            
                         </div>
                     </td>
                 </tr>
@@ -125,55 +113,49 @@
     </div>
     <!-- Termina titulo filtro -->
     <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px; font-family:Roboto, Helvetica, Arial, sans-serif;">
-        <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
+        <table align="center" border="0" cellpadding="0" cellspacing="0" rowspacing="1" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
             <tbody>
                 <tr>
                     <td style="width:120px;">
-                        <div style="text-align: center;color:#E5E5E5;  height: 260px; width:600px; padding: 10px; background-color: #F4F4F4;">
-                             <table align="center" border="0" cellpadding="10" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:rgb(255, 255, 255); height:20px ;width:100%;">
+                        <div style="text-align: center;color:#E5E5E5;  height: 220px; width:600px; padding: 10px; background-color: #F4F4F4;">
+                             <table align="center" border="1" cellpadding="1" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:rgb(255, 255, 255); height:20px ;width:100%;">
                                     <tbody>
                                         <tr>
-                                            <td> <!-- card com descricao do mapa 1 -->
+                                            <td style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px;line-height:20px ; width: 40px ;">
                                                 {% for dates in date %}
-                                                    <div style="text-align:center ;color:#212121; font-size: 13px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px; width: 40px;">
-                                                        {{dates}}
-                                                    </div>
+                                                    {{dates}}
                                                 {% endfor %}
                                             </td>
-                                            <td> <!-- card com descricao do mapa 1 -->
+                                            <td style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px;line-height:20px ; width: 35px ;">
                                                 {% for names in name %}
-                                                    <div style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px; width: 20px;">
-                                                        {{names}}
-                                                    </div>
+                                                    {{names}}
                                                 {% endfor %}
                                             </td>
-                                            <td> <!-- card com descricao do mapa 1 -->
+                                            <td style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px;line-height:20px ; width: 45px ;">
                                                {% for mags in mag %}
-                                                    <div style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px; width: 20px;">
-                                                        {{mags | floatformat:4}}
-                                                    </div>
+                                                    {% if mags != undefined or nan or none %}
+                                                        {{mags | floatformat:7}}
+                                                    {% else %}
+                                                        ' '
+                                                    {% endif %}
                                                 {% endfor %}
                                             </td>
-                                            <td> <!-- card com descricao do mapa 1 -->
+                                            <td style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px;line-height:20px ; width: 40px ;">
                                                 {% for velocs in veloc %}
-                                                    <div style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px; width: 45px;">
-                                                        {{velocs}} km/s
-                                                    </div>
+                                                    {{velocs}} km/s
                                                 {% endfor %}
                                             </td>
-                                            <td> <!-- card com descricao do mapa 1 -->
-                                                {% for durations in duration %}
-                                                    <div style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px; width: 25px;">
-                                                        {{durations  | floatformat:4}} s
-                                                    </div>
-                                                {% endfor %}
+                                            <td style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px;line-height:20px ; width: 40px ;">
+                                                {% if duration != nan or none %}
+                                                    {% for durations in duration %}
+                                                            {{durations  | floatformat:4}} s</div>
+                                                    {% endfor %}
+                                                {% endif %}
                                             </td>
-                                            <td> <!-- card com descricao do mapa 1 -->
-                                                {% for durations in duration %}
-                                                    <div style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px; width: 10px;">
-                                                        <a style="text-align: center; text-decoration: none;font-size: 11px;" href="{{host}}/archive/newsletter/{{filter_name}}_results_filter_newsletter.csv">Download</a>
-                                                    </div>
-                                                {% endfor %}
+                                            <td style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px;line-height:20px ; width: 40px ;">
+                                                
+                                                    <a style="text-align: left; text-decoration: none;font-size: 11px;" href="{{host}}/archive/newsletter/{{filter_name}}_results_filter_newsletter.csv">Download</a>
+                                                
                                             </td>
                                     </tbody>
                                 </table>
